
    - References: GH #162, GH #137, GH #164

    [ FEATURES ]
    - CGI::Carp now has $CGI::Carp::FULL_PATH for displaying the full path to the
      offending script in error messages

    - CGI now has env_query_string() for getting the value of QUERY_STRING from the
      environment and not that fiddled with by CGI.pm (which is what query_string()
      does) (GH #161)

    [ SPEC / BUG FIXES ]
    - Add the multi_param method to :cgi export (thanks to xblitz for the patch
      and tests. GH #167)

    - Fix warning for lack of HTTP_USER_AGENT in CGI::Carp (GH #168)

    - Fix imports when called from CGI::Fast, restores the import of CGI functions
      into the callers namespace for users of CGI::Fast (GH leejo/cgi-fast#11 and
      GH leejo/cgi-fast#12)

    [ INTERNALS ]
    - Remove dependency on constant - internal DEBUG, XHTML_DTD and EBCDIC
      constants changes to $_DEBUG, $_XHTML_DTD, and $_EBCDIC

    [ DOCUMENTATION ]
    - Add missing documentation for env variable fetching routines (GH #163)

4.13 2014-12-18

    [ RELEASE NOTES ]
    - CGI::Pretty is now DEPRECATED and will be removed in a future release.
      Please see GH #162 (https://github.com/leejo/CGI.pm/issues/162) for more
      information and discussion (also GH #140 for HTML function deprecation
      discussion: https://github.com/leejo/CGI.pm/issues/140)

    [ TESTING ]
    - fix t\rt-84767.t for failures on Win32 platforms related to file paths

4.11 2014-12-02

    [ SPEC / BUG FIXES ]
    - more hash key ordering bugs fixed in HTML attribute output (GH #158,
      thanks to Marcus Meissner for the patch and test case)

    [ REFACTORING ]
    - escapeHTML (and unescapeHTML) have been refactored to use the functions
      exported by the HTML::Entities module (GH #157)
    - change BUILD_REQUIRES to TEST_REQUIRES in Makefile.PL as these are test
      dependencies not build dependencies (GH #159)

    [ DOCUMENTATION ]