@@ -41,6 +41,9 @@
       environment and not that fiddled with by CGI.pm (which is what query_string()
       does) (GH #161)
 
+    - CGI::ENCODE_ENTITIES var added to control which chracters are encoded by the
+      call to the HTML::Entities module - defaults to &<>"\x8b\x9b' (GH #157)
+
     [ SPEC / BUG FIXES ]
     - Add the multi_param method to :cgi export (thanks to xblitz for the patch
       and tests. GH #167)
